--- a/src/core/animeDownloader/manifest.json
+++ b/src/core/animeDownloader/manifest.json
@@ -1,4 +1,4 @@
 {
     "WEB_URL" : "https://www3.animeflv.net",
-    "QUERY_URL" : "browse?q="
+    "QUERY_URL" : "https://www3.animeflv.net/browse?q="
 }
